Fix the incorrect page alignment on mobile

--- a/_sass/portfolio-title-page.scss
+++ b/_sass/portfolio-title-page.scss
@@ -75,7 +75,6 @@ header {
 main {
     padding: 2rem;
     margin: 20px auto;
-    width: 100%;
     max-width: 960px;
 
     .timeline {
